--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1786,7 +1786,7 @@ body {
 .cid-qqTMsr9vwR {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #c1c1c1;
+  background-color: #cc2952;
 }
 .cid-qqTMsr9vwR .mbr-section-subtitle {
   color: #767676;
